# config-loader

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  rustfmt.toml
.github/workflows/: build.yml  code-integrity.yml  integrity.yml
runtime/i18n/en-CA/: main.ftl
src/: app.rs  cli.rs  constants.rs  gui.rs  main.rs  util.rs
src/gui/: mod.rs  ui.rs  window.rs
static/: starter-config-master.toml  starter-loadouts-config-unix.toml  starter-loadouts-config-windows.toml  windows_manifest.xml
