[package]
name = "config-loader"
version = "1.1.1"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/zedseven/config-loader"
repository = "https://github.com/zedseven/config-loader"
documentation = "https://github.com/zedseven/config-loader"
description = "A tool for quickly switching between different file configurations, using symbolic links."
categories = ["command-line-utilities", "config", "development-tools"]
keywords = ["configuration", "symlinks", "file-management"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
home = "0.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
yansi = "0.5"
