[package]
name = "config-loader"
version = "3.0.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/zedseven/config-loader"
repository = "https://github.com/zedseven/config-loader"
documentation = "https://github.com/zedseven/config-loader"
description = "A tool for quickly switching between different file configurations, using symbolic links."
categories = ["command-line-utilities", "config", "development-tools"]
keywords = ["configuration", "symlinks", "file-management"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", optional = true }
druid = { git = "https://github.com/linebender/druid", optional = true, features = ["raw-win-handle"] }
home = "0.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
yansi = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = ["windef"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[patch."https://github.com/linebender/druid"]
druid = { git = "https://github.com/zedseven/druid" } # Awaits https://github.com/linebender/druid/pull/2119

[patch.crates-io]
winres = { git = "https://github.com/zedseven/winres" } # Awaits https://github.com/mxre/winres/pull/39

[features]
cli = ["clap", "yansi"]
gui = ["druid", "winapi"]

[package.metadata.winres]
FileDescription = "Config Loader"
